# cex

./: .air.toml  .env.example  .gitignore  DOCS.md  README.md  commands.md  docker-compose.yml  go.mod  go.sum
cmd/server/: main.go
crates/api/: Cargo.toml
crates/api/.sqlx/: query-82d8aa65afc03cef307f188f6571eba3f5d70a8e2a98ea96dca3f97f9abbec98.json  query-eaa640b57177bdcb03b52c77820f0a2035d28e8cbaa51d1b85b0c9029a99624c.json
crates/api/src/: main.rs  orderbook.rs  types.rs
crates/api/src/db/: connection.rs  mod.rs  user_repo.rs
crates/api/src/engine/: mod.rs  orderbook.rs
crates/api/src/handlers/: auth_handlers.rs  mod.rs  orders_handlers.rs
crates/api/src/models/: user.rs
crates/api/src/routes/: auth_routes.rs  mod.rs  orders_routes.rs
crates/api/src/types/: auth_types.rs  mod.rs  order_types.rs
crates/api/src/utils/: jwt.rs
internal/connections/: db.go
internal/env/: env.go
internal/models/: user.go
