[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros"] }
tokio = { version = "1.51.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
serde_json = "1.0.149"
jsonwebtoken = {version = "10.3.0", features = ["rust_crypto"]}
